@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.688 2003/02/06 05:29:36 walito Exp $
+ * $Id: ChangeLog,v 1.689 2003/02/06 19:34:09 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-02-07 11:30 UTC+0100 Giancarlo Niccoai <gian@niccolai.ws>
+  *include/inet.h
+    ! Fixed a misinclude that appeared in redhat 6.0
+
+  *source/vm/inet.c
+    + Added InetGetTimeout() to query the assigned timeout of a socket.
+
+  *doc/inet.txt
+    + Added api doc of InetGetTimeout()
+
 
 2003-02-06 02:00 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * source/rtl/tbrowse.prg
